# rust_poise_python_experiment

./: .env.7z  .gitignore  main.py  req.txt
rust_src/: Cargo.toml
rust_src/src/: lib.rs  logging.rs  prelude.rs
rust_src/src/discord_bot_rs/: create_bot.rs  mod.rs  utility.rs
rust_src/src/discord_bot_rs/audio/: decoder.rs  handler.rs  manager.rs  mod.rs
rust_src/src/discord_bot_rs/commands/: mod.rs  util.rs  voice.rs
rust_src/src/python_wrappers/: mod.rs
